force-app/main/default/objects/apm_nomination__c/apm_nomination__c.object-meta.xml
<CustomObject>
    <description>This object contains list of ACT events nominated for APM measurement</description>
    <label>APM Nomination</label>
    <nameField>
        <label>APM Nomination</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>APM Nomination</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>