force-app/main/default/objects/apm_nomination__c/fields/Asset_Name_c__c.field-meta.xml
<CustomField>
    <fullName>Asset_Name_c__c</fullName>
    <label>Asset_Name__c</label>
    <length>255</length>
    <type>Text</type>
</CustomField>