force-app/main/default/objects/apm_nomination__c/fields/Comments_c__c.field-meta.xml
<CustomField>
    <fullName>Comments_c__c</fullName>
    <label>Comments__c</label>
    <length>255</length>
    <type>Text</type>
</CustomField>