force-app/main/default/objects/apm_nomination__c/fields/Date_Nominated_c__c.field-meta.xml
<CustomField>
    <fullName>Date_Nominated_c__c</fullName>
    <label>Date_Nominated__c</label>
    <type>Date</type>
</CustomField>