force-app/main/default/objects/apm_nomination__c/fields/Nominator_c__c.field-meta.xml
<CustomField>
    <fullName>Nominator_c__c</fullName>
    <label>Nominator__c</label>
    <length>255</length>
    <type>Text</type>
</CustomField>