force-app/main/default/objects/apm_nomination__c/fields/Status_c__c.field-meta.xml
<CustomField>
    <fullName>Status_c__c</fullName>
    <label>Status__c</label>
    <length>255</length>
    <type>Text</type>
</CustomField>