force-app/main/default/objects/apm_nomination__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Name__c</columns>
    <columns>Asset_Id_c__c</columns>
    <columns>Asset_Name_c__c</columns>
    <columns>Asset_Type_c__c</columns>
    <columns>Nominator_c__c</columns>
    <columns>Date_Nominated_c__c</columns>
    <columns>Status_c__c</columns>
    <columns>Comments_c__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
</ListView>